<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="gallery.imgur.com.imgurgallery.ui.main.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar

            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lottie_fileName="wave.json"
        android:layout_gravity="bottom"
        android:layout_marginBottom="-100dp"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/recViewType"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_staggered_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_title="@string/staggered_grid"
            app:fab_icon="@drawable/ic_view_stagger_grid"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_title="@string/grid"
            app:fab_icon="@drawable/ic_view_grid"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_title="@string/list"
            app:fab_icon="@drawable/ic_view_list"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>





</android.support.design.widget.CoordinatorLayout>
