<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_help"
        android:title="@string/title_about"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        app:showAsAction="always"/>

</menu>
